  for Internet Explorer's sake and standards compliance
* (bug 13298) Tighter limits on Special:Newpages limits when embedding
* Email subject in content language instead of sending user's UI language
* (bug 13251) Allow maintenance rebuild scripts to work with Postgres
* (bug 2084) Fixed incorrect regex to match redirects

=== API changes in 1.13 ===

* Fixing main page display in meta=siteinfo
* (bug 13128) Added patrolled flag to list=recentchanges
* Implemented {bl,ei,iu}redirect (lists links through redirects as well)
* (bug 13154) Introduced subpages flag to meta=siteinfo&siprop=namespaces
* (bug 13157) Added ucuserprefix parameter to list=usercontibs
* (bug 12394) Added rctitles parameter to list=recentchanges, making rcid retrieval easier
* (bug 13218) Fix inclusion of " character in hyperlinks
* Added watch and unwatch parameters to action=delete and action=move
* Added action=edit
* (bug 11401) Added xmldoublequote to xml formatter
* Added rvsection parameter to prop=revisions to allow fetching the content of a certain section only

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Extremaduran (ext)
* Finnish (fi)
* Faroese (fo)
* French (fr)
* Franco-Provençal (frp)
* Friulian (fur)
* Irish (ga)
* Gan (gan)
* Galician (gl)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Indonesian (id)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kalaallisut (kl)
* Khmer (km)
* Latin (la)
* Luxembourgish (lb)
* Limburgish (li)
* Lao (lo)
* Lithuanian (lt)
* Malayalam (ml)
* Moldavian (mo)
* Marathi (mr)